# synapse-core

./: Cargo.toml  PR_DESCRIPTION.md
cli/synapse-cli/: Cargo.toml  README.md
cli/synapse-cli/src/: client.rs  formatter.rs  main.rs
cli/synapse-cli/src/commands/: mod.rs
sdks/rust/: Cargo.toml
sdks/rust/src/: admin.rs  admin_models.rs  client.rs  error.rs  lib.rs  models.rs
sdks/rust/src/resources/: events.rs  graphql.rs  health.rs  mod.rs  settlements.rs  transactions.rs
sdks/rust/src/resources/admin/: mod.rs  settlements.rs
src/: cli.rs  lib.rs  main.rs  metrics.rs
src/auth/: error.rs
src/db/: mod.rs  partition.rs  queries.rs
src/graphql/: mod.rs  pagination.rs  rate_limiting.rs
src/graphql/resolvers/: transaction.rs
src/handlers/: mod.rs  session.rs  webhook.rs
src/middleware/: idempotency.rs
src/payments/: connection_pool.rs  mod.rs
src/security/: connection_pool.rs  mod.rs
src/services/: lock_manager.rs  mod.rs  query_cache.rs  reconciliation.rs  settlement.rs  webhook_dispatcher.rs
src/telemetry/: health_checks.rs  metrics_optimization.rs  mod.rs
src/validation/: mod.rs
tests/common/: mod.rs
