[package]
name = "synapse-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Synapse API"

[[bin]]
name = "synapse"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["full"] }
